# Thesis_New

./: .gitignore  Aggregate_MIMIC.py  data.py  data_notebook.ipynb  new_data_notebook.ipynb  notebook.ipynb  pyproject.toml  simulated_dag.csv  simulated_data.csv
Experiments/: Aggregate_MIMIC.py  PC_synthetic.py
causal_discovery/ci_tests/: listwise.py
data/data_generation/: simulate_data.py  tetrad_graph_to_array.py
data/processed/: aggregate_mimic.py  processed_admissions_selected_labs.csv
data/processed_mimic/: aggregate_mimic.py  aggregate_mimic_24h.py  generate_synthetic.py  mimic_mar_v2.csv  mimic_mcar_v2.csv  mimic_mnar_v2.csv  new_aggregate_mimic.py  processed_mimic_24h_labs_demographics.csv  synthetic_data.csv
data/synthetic_data/: data_complete.csv  data_mar.csv  missingness_ground_truth.csv  simulated_dag.csv  simulated_data.csv
data/synthetic_data_csv/: dag_ground_truth.csv  data_mcar.csv
data/synthetic_data_generation/: dag_and_data.py  final_scm_simulator.py  missingness.py  missingness_synthetic.py
mvpc/: missingness.py  mvpc_oracle.py  mvpc_pipeline.py  orientation.py  skeleton.py
mvpc/ci_tests/: bin_drw.py  bin_permc.py  bin_td.py  (+3 more)
notebooks/: 00_check_ci_tests.ipynb  00_ci_tests_validation.ipynb  01_generate_synthetic_data.ipynb  02_mvpc_synthetic_data.ipynb  02_run_mvpc.ipynb  03_mvpc_mimic_data copy.ipynb  03_mvpc_mimic_data.ipynb  FFFFFinal_mvpc_synthetic_scaling_experiment copy.ipynb  Final_mvpc_mimic_experiment.ipynb  Final_mvpc_synthetic_scaling_experiment.ipynb  mimic_mvpc.ipynb  new_mimic_aggregation.ipynb  simulation_study.ipynb
(+3 files in other folders)
